--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  profiles:
+    active: local
+
   datasource:
     url: jdbc:h2:tcp://localhost/~/querydsl
     username: sa
@@ -13,6 +16,7 @@ spring:
 #         show_sql: true
         format_sql: true
         use_sql_comments: true
+    open-in-view: false
 
 logging.level:
   org.hibernate.SQL: debug
