--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
+  profiles:
+    active: test
+
   datasource:
-    url: jdbc:h2:mem:test
+    url: jdbc:h2:mem://localhost/~/querydsl
     username: sa
     password:
     driver-class-name: org.h2.Driver
