feat: MemberRepository 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     active: local
 
   datasource:
-    url: jdbc:h2:tcp://localhost/~/querydsl
+    url: jdbc:h2:mem://localhost/~/querydsl
     username: sa
     password:
     driver-class-name: org.h2.Driver
